# AIFoundry-multiagent-A2A

./: .gitignore  NOTES.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
remote_agents/sports_news_agent/: .env-sample  __main__.py  agent.py  agent_executor.py  mcp_results_20250905_150634.txt  mcp_results_20250905_150634_summary.txt  mcp_test.py  pyproject.toml
remote_agents/sports_results_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
routing_agent/: .env-sample  __init__.py  __main__.py  app_state_pattern.py  dependencies.py  factory_pattern.py  improved_app.py  pyproject.toml  remote_agent_connection.py  routing_agent.py  run_fastapi.py  simple_client.py  test_direct_connection.py  test_production_readiness.py  test_realistic_telemetry.py  test_routing_agent.py  tracing.py
routing_agent/tests/: client.py  enhanced_dependencies.py  requirements-fastapi.txt  test_examples.py  test_telemetry.py  zero_impact_migration.py
testing/: agent_with_a2a.py  azure_ai_with_existing_agent.py  azure_ai_with_thread.py  microsoft_learn_agent.py  openai_responses_agent.py  pyproject.toml  simple_client.py  test.json  test_direct_connection.py  test_mslearn_agent.py
testing/yaml/: MicrosoftLearnAgent.yaml  OpenAIResponses.yaml
tests/: simple_client.py
