[project]
name = "routing-agent"
version = "0.1.0"
description = "Multi-agent system with Azure AI Agents integration for routing and task delegation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.4",
    "azure-ai-agents>=1.1.0b1",
    "azure-identity>=1.15.0",
    "semantic-kernel>=1.36.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "a2a-sdk==0.3.10",
    "azure-ai-projects>=1.0.0",
    "azure-monitor-opentelemetry>=1.7.0",
    "opentelemetry-sdk>=1.36.0",
    "pydantic>=2.11.7",
    "agent-framework>=1.0.0b251028",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]
